--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ links = "tesseract"
 build = "build.rs"
 
 [dependencies]
-leptonica-sys = "~0.3"
+leptonica-sys = "~0.3.5"
 
 [build-dependencies]
 bindgen = "0.56"
 [target.'cfg(windows)'.build-dependencies]
 vcpkg = "0.2.8"
+[target.'cfg(target_os="macos")'.build-dependencies]
+pkg-config = "0.3.19"
