--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ leptonica-sys = "~0.4"
 bindgen = "0.56"
 [target.'cfg(windows)'.build-dependencies]
 vcpkg = "0.2.8"
-[target.'cfg(target_os="macos")'.build-dependencies]
+[target.'cfg(any(target_os="macos", target_os="linux"))'.build-dependencies]
 pkg-config = "0.3.19"
